# pocket_waifu

./: .gitignore  AGENTS.md  README.md  after_test_button_labels.txt  pubspec.yaml  shade_after_reinstall_labels.txt  shade_attempt2_labels.txt  shade_check_menu_labels.txt  shade_labels.txt  shade_ready_menu_labels.txt  shade_with_testnotif2_labels.txt  ui_after_input_send.xml  ui_after_input_send_labels.txt  ui_after_open_nav.xml  ui_after_screenshot.xml  ui_after_screenshot_action_labels.txt  ui_after_screenshot_from_menu.xml  ui_after_screenshot_step3.xml  ui_after_step3_send.xml  ui_after_step3_send_labels.txt  ui_after_test_button.xml  ui_after_user_menu_tap.xml  ui_after_user_step3_menu.xml  ui_after_user_step3_menu_labels.txt  ui_app_state_now.xml  ui_current.xml  ui_input_tab_after_reopen.xml  ui_input_tab_after_reopen_labels.txt  ui_input_tab_labels.txt  ui_notif_scrolled_for_test.xml  ui_notification_panel.xml  ui_settings_root.xml  ui_shade_after_reinstall.xml  ui_shade_after_testnotif.xml  ui_shade_attempt2.xml  ui_shade_check_for_menu.xml  ui_shade_ready_for_menu.xml  ui_shade_with_testnotif2.xml
.github/: pull_request_template.md
android/app/src/main/cpp/: CMakeLists.txt  Live2DNative.cpp
docs/: ANDROID_RELEASE_LOGGING_EXECUTION_PLAN.md  APK_RELEASE_INFRA_SECURITY_DELIVERABLE_2026-02-26.md  APK_RELEASE_LOGGING_QA_BUG_REPORT_TEMPLATE.md  APK_RELEASE_OPS_OUTPUT_GAP_ANALYSIS_2026-02-26.md  APK_RELEASE_QA_TEST_MATRIX_2026-02-26.md  CHANGELOG.md  CUBISM_SDK_INSTALLATION.md  DOCS_AI_UPPERCASE_SUMMARY_KO.md  EXTENSION_PLAYBOOK.md  IMAGE_AND_SCREEN_SHARE_DEVELOPMENT_PLAN.md  IMPLEMENTATION_STATUS_AUDIT.md  LIVE2D_PHASE7_COMPLETION_PLAN.md  MOTION_SYSTEM_OVERHAUL_PLAN.md  NATIVE_LIVE2D_MIGRATION_PLAN.md  Newcastle.md  (+51 more)
(+321 files in other folders)
